--- a/hello-world.html
+++ b/hello-world.html
@@ -3,7 +3,7 @@
 <head>
     <title>Hello World</title>
 </head>
-<body>
+</body>
     <h1>Hello, World!</h1>
     <p>Esta é uma página de teste para verificar o funcionamento do GitHub Pages.</p>
 </body>
