--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link>
+    <link rel="stylesheet" href="style.css">
+
     <title>Meu Projeto</title>
     <meta charset="UTF-8">
 </head>
