--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link>
-    <link rel="stylesheet" href="style.css">
-
     <title>Meu Projeto</title>
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bem-vindo ao Meu Portfólio</h1>
+    <h1>Bem-vindo ao Meu Projeto</h1>
 
     <h2>Apresentação</h2>
-    <p>Olá, meu nome é kauã. Sou estudante deinformática.</p>
-    <p>Este projeto é parte do nosso curso e inclui várias páginas sobre diferentes temas que desenvolvemos ao longo das aulas.</p>
+    <div class="container">
+        <!-- Substitua "minha-foto.png" pelo nome do arquivo da sua imagem -->
+        <img class="foto-perfil" src="minha-foto.png" alt="Foto de Perfil">
+        <div class="conteudo">
+            <p>Olá, meu nome é kauã. Sou estudante de informática.</p>
+            <p>Este projeto é parte do nosso curso e inclui várias páginas sobre diferentes temas que desenvolvemos ao longo das aulas.</p>
+        </div>
+    </div>
 
     <h2>Navegação entre os Projetos</h2>
     <nav>
