--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Apresentação</h2>
     <div class="container">
         <!-- Substitua "minha-foto.png" pelo nome do arquivo da sua imagem -->
-        <img class="foto-perfil" src=fotoprojetocurriculo.jpg alt="Foto de Perfil">
+        <img class="foto-perfil" src=foto projeto curriculo.jpg alt="Foto de Perfil">
         <div class="conteudo">
             <p>Olá, meu nome é kauã. Sou estudante de informática.</p>
             <p>Este projeto é parte do nosso curso e inclui várias páginas sobre diferentes temas que desenvolvemos ao longo das aulas.</p>
