--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <div class="conteudo">
             <p>Olá, meu nome é kauã. Sou estudante de informática.</p>
             <p>Este projeto é parte do nosso curso e inclui várias páginas sobre diferentes temas que desenvolvemos ao longo das aulas.</p>
+            <p>Altura: 1.74m</p>
+            <P>Idade: 16</P>
+            <p>Data de nascimento: 17/10/2007</p>
+            <p>Contato: kaua.a35071@aluno.decisaovirtual.com.br</p>
+            <p>Habilidades e competências: trabalho em equipe, excell basico, inglês pouco avançado e paciente
+            <p>Resumo: Jovem de 16 anos, estudante de informática, sem experiências profissionais antereiores, em busca de menor aprendiz ou emprego.</p>
         </div>
     </div>
 
