--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <P>Idade: 16</P>
             <p>Data de nascimento: 17/10/2007</p>
             <p>Contato: kaua.a35071@aluno.decisaovirtual.com.br</p>
-            <p>Habilidades e competências: trabalho em equipe, excell basico, inglês pouco avançado e paciente
+            <p>Habilidades e competências: trabalho em equipe, excell basico, inglês pouco avançado e paciente</p>
             <p>Resumo: Jovem de 16 anos, estudante de informática, sem experiências profissionais antereiores, em busca de menor aprendiz ou emprego.</p>
         </div>
     </div>
